force-app/main/default/objects/Outcome_Variable_Response__c/Outcome_Variable_Response__c.object-meta.xml
<CustomObject>
    <description>Translates an response to a Variable question into a value that the Outcome Generator can understand.</description>
    <label>Outcome Variable Response</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcome Variable Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>