force-app/main/default/objects/Outcome_Variable_Response__c/fields/Outcome_Value__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Value__c</fullName>
    <description>Equivalent value for Outcome Engine.</description>
    <label>Outcome Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>