force-app/main/default/objects/Outcome_Variable_Response__c/fields/Outcome_Variable_Response_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Variable_Response_Configuration__c</fullName>
    <label>Outcome Variable Response Configuration</label>
    <referenceTo>Outcome_Variable_Response_Configuration__c</referenceTo>
    <relationshipLabel>Outcome Variable Responses</relationshipLabel>
    <relationshipName>Outcome_Variable_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>