force-app/main/default/objects/Outcome_Variable_Response__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <description>Name of the sObject that response is associated with.</description>
    <label>sObject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>