force-app/main/default/objects/Outcome_Variable_Response__c/fields/sObject_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_Field_Name__c</fullName>
    <description>Name of the field on sObject that this response is associated with.</description>
    <label>sObject Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>