force-app/main/default/objects/Outcome_Variable_Response__c/fields/User_Value__c.field-meta.xml
<CustomField>
    <fullName>User_Value__c</fullName>
    <description>Value entered by the user</description>
    <label>User Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>