force-app/main/default/objects/Outcome_Variable_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Outcome_Variable_Response_Configuration__c</columns>
    <columns>NAME</columns>
    <columns>sObject__c</columns>
    <columns>sObject_Field_Name__c</columns>
    <columns>User_Value__c</columns>
    <columns>Outcome_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>